--- a/layout.css
+++ b/layout.css
@@ -17,6 +17,34 @@ html {
 }
 
 .app-header {
+background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+background-size: 1800% 1800%;
+-webkit-animation: rainbow 18s ease infinite;
+-z-animation: rainbow 18s ease infinite;
+-o-animation: rainbow 18s ease infinite;
+  animation: rainbow 18s ease infinite;}
+@-webkit-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-moz-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-o-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+
+.app-header {
   background-color: #3D4145;
   height: 77px;
   color: #ffffff;
@@ -26,11 +54,18 @@ html {
   font-size: 24px;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Dosis:500');
+
 .app-header > h1 {
-  font-size: 24px;
+  font-size: 34px;
   font-weight: 400;
   margin: 0;
-  margin-top: 28px;
+  margin-top: 22px;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 500;
+  -webkit-text-stroke-width: 0px;
+  -webkit-text-stroke-color: grey;
+    
 }
 
 .app-content {
