--- a/layout.css
+++ b/layout.css
@@ -99,7 +99,8 @@ background-size: 1800% 1800%;
 }
 
 .time-indicator-2 .time-indicator-content-2 {
-   margin-bottom: 16px;
+   margin-bottom: 26px;
+   padding-bottom: 10px;
    float:right;
    margin-left: auto;
    margin-right: auto;
